kubernetes/apps/network/reverse-proxy/hass/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy-homeassistant
  namespace: network
spec:
  externalName: homeassistant.iot.internal
  ports:
    - port: 8123
      protocol: TCP
      targetPort: 8123
  type: ExternalName
