kubernetes/apps/network/reverse-proxy/hass/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/appName: Home Assistant
    hajimari.io/enable: "true"
    hajimari.io/group: automation
    hajimari.io/icon: simple-icons:homeassistant
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Automation
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/icon: homeassistant.png
  name: reverse-proxy-homeassistant
  namespace: network
spec:
  ingressClassName: public
  rules:
    - host: &host homeassistant.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: reverse-proxy-homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts: [*host]
      secretName: *host
